# MCP_ADS

./: .dockerignore  .gitignore  Dockerfile  README.md  cursor-mcp.example.json  docker-compose.yml  prueba_ads.py  pyproject.toml  read_var_test.py  verificar_ads.py
.cursor/: mcp.json
.venv-ads/: pyvenv.cfg
docs/: architecture.md  docker-ubuntu.md  twincat-tc2-tc3.md
examples/: plc.json  variables.json
examples/wsl-tc3/: plc.json  variables.json
mcp_ads/: __init__.py  __main__.py  ads_connection.py  config.py  plc_types.py  server.py
mcp_ads/schemas/: variables.schema.json
schemas/: plc.schema.json
scripts/: cursor-mcp-wsl.sh
tests/: test_config.py  test_plc_types.py  test_tools_logic.py
